--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -24,12 +24,11 @@ dependencies {
 
     compileOnly 'org.checkerframework:checker-qual:2.5.2'
     compileOnly 'org.checkerframework:checker-compat-qual:2.5.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
     implementation 'com.stripe:stripe-android:2.0.2'
     implementation 'com.google.mlkit:language-id:16.1.1'
     implementation 'com.android.billingclient:billing:5.0.0'
+    implementation 'org.osmdroid:osmdroid-android:6.1.10'
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
@@ -253,5 +252,3 @@ android {
         }
     }
 }
-
-apply plugin: 'com.google.gms.google-services'
