--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -21,11 +21,9 @@ dependencies {
 
     compileOnly 'org.checkerframework:checker-qual:2.5.2'
     compileOnly 'org.checkerframework:checker-compat-qual:2.5.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-location:17.1.0'
-    implementation 'com.google.android.gms:play-services-wallet:18.1.2'
     implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
     implementation 'com.stripe:stripe-android:2.0.2'
+    implementation 'org.osmdroid:osmdroid-android:6.1.8'
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
 }
@@ -179,5 +177,3 @@ android {
         }
     }
 }
-
-apply plugin: 'com.google.gms.google-services'
