--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -43,6 +43,7 @@ def getAppHash(){
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.3'
+    ndkVersion "21.0.6113669"
 
     defaultConfig.applicationId = "org.telegram.messenger"
 
