--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   - "./build_boringssl.sh"
   - "cd ../.."
   # Build
-  - "./gradlew assembleAfatRelease"
+  - "./gradlew assembleX64_SDK23Release"
 
 after_success:
   - "./gradlew test"
