--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,19 @@ jdk:
   - openjdk8
 android:
   components:
-    - build-tools-28.0.3
-    - android-28
+    - build-tools-31.0.0
+    - android-31
 addons:
   apt_packages:
     - ninja-build
 
 install:
   - set -e
-  - echo y | sdkmanager "ndk;21.1.6352462"
+  - echo y | sdkmanager "ndk;21.4.7075529"
   - echo y | sdkmanager "cmake;3.6.4111459"
   - echo y | sdkmanager "cmake;3.10.2.4988404"
 before_script:
-  - export NDK=$ANDROID_HOME/ndk/21.1.6352462
+  - export NDK=$ANDROID_HOME/ndk/21.4.7075529
   - export NINJA_PATH=/usr/bin/ninja
   - export PATH=`echo $ANDROID_HOME/cmake/3.10.2.4988404/bin`:$PATH
   - echo -e "APP_ID = ${APP_ID}\nAPP_HASH = ${APP_HASH}" > API_KEYS
@@ -25,10 +25,11 @@ script:
   - set -e
   # Prebuild
   - "cd TMessagesProj/jni"
-  - "./build_ffmpeg_clang.sh"
+  - "./build_libvpx_clang.sh x86_64"
+  - "./build_ffmpeg_clang.sh x86_64"
   - "./patch_ffmpeg.sh"
-  - "./patch_boringssl.sh"
-  - "./build_boringssl.sh"
+  - "./patch_boringssl.sh x86_64"
+  - "./build_boringssl.sh x86_64"
   - "cd ../.."
   # Build
   - "./gradlew assembleX64_SDK23Release"
