[TF][PUSH] implemented a simple UnifiedPush support
This simple implementation only triggers the networks to resume when an
event is received, so Telegram can get the events by itself.

This is not like the other push providers where the change information
is processed by PushListenerController directly, but it still saves battery
since the process disconnects from Telegram servers as soon as the
updates are processed.

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'com.android.library'
 repositories {
     mavenCentral()
     google()
+    maven { url 'https://www.jitpack.io' }
 }
 
 configurations {
@@ -32,6 +33,8 @@ dependencies {
     implementation 'com.stripe:stripe-android:2.0.2'
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.google.guava:guava:31.1-android'
+
+    implementation 'com.github.UnifiedPush:android-connector:2.1.1'
 
     implementation 'org.osmdroid:osmdroid-android:6.1.14'
 
