[TF][PUSH] avoid getting other libraries from jitpack
As suggested by @p1gp1g

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -5,7 +5,12 @@ apply plugin: 'com.android.library'
 repositories {
     mavenCentral()
     google()
-    maven { url 'https://www.jitpack.io' }
+    maven {
+        url 'https://www.jitpack.io'
+        content {
+            includeModule 'com.github.UnifiedPush', 'android-connector'
+        }
+    }
 }
 
 configurations {
