--- a/TMessagesProj_App/build.gradle
+++ b/TMessagesProj_App/build.gradle
@@ -3,7 +3,12 @@ apply plugin: 'com.android.application'
 repositories {
     mavenCentral()
     google()
-    maven { url 'https://www.jitpack.io' }
+    maven {
+        url 'https://www.jitpack.io'
+        content {
+            includeModule 'com.github.UnifiedPush', 'android-connector'
+        }
+    }
 }
 
 configurations {
