[TF][PUSH] update android-connector to 2.2.0
Since android-connector is built with Java 17 some other build system
modifications were needed.

This also means ./gradlew must be called using Java 17+.

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.google.guava:guava:31.1-android'
 
-    implementation 'com.github.UnifiedPush:android-connector:2.1.1'
+    implementation 'com.github.UnifiedPush:android-connector:2.2.0'
 
     implementation 'org.osmdroid:osmdroid-android:6.1.14'
 
@@ -84,8 +84,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
 
         coreLibraryDesugaringEnabled true
     }
