--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@
 APP_VERSION_CODE=4082
 APP_VERSION_NAME=10.2.6
 APP_PACKAGE=org.telegram.messenger
-org.gradle.jvmargs=-Xmx4096M -XX:MaxPermSize=4096m
+org.gradle.jvmargs=-Xmx4096M -XX:MaxMetaspaceSize=4096m
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=false
